--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.4",
+        "passport-local": "^1.0.0",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
