See if my old version works now

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "awa_7",
+    "name": "seventh-swamphony",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "node app.js"
     },
     "author": "TH",
     "license": "ISC",
@@ -16,10 +16,10 @@
         "jsonwebtoken": "^9.0.2",
         "nodemon": "^3.1.4",
         "passport-local": "^1.0.0",
-        "uuid": "^10.0.0"
+        "uuid": "^10.0.0",
+        "passport": "^0.7.0"
     },
     "devDependencies": {
-        "express-session": "^1.18.0",
-        "passport": "^0.7.0"
+        "express-session": "^1.18.0"
     }
 }
